--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+    margin: 0;
+}
 header h1, header a {
     display: inline-block;
     text-decoration: none;
@@ -23,3 +27,46 @@ header {
     margin:0;
     background-color: #4CAF50;
 }
+
+.contactPage {
+    background-image: url("../img/smokies.jpg");
+    background-size: cover;
+    height:100vh;
+    overflow-y: auto;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.content h1 {
+    margin-bottom: 0;
+}
+
+.content {
+    background-color: white;
+    padding: 0 1.5em;
+    height: inherit;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    opacity: 0.9;
+}
+
+.links {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 50%;
+}
+
+p {
+    font-size: 1.5em;
+}
+
+.email_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 60%;
+}
+
