--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,16 @@ body {
     margin: 0;
 }
 header h1, header a {
-    display: inline-block;
+    /* display: inline-block; */
     text-decoration: none;
     font-family: 'Arial';
     color: white;
+    text-align: center;
+
 }
 header a {
-    margin-right: 5.5em;
-    text-align: right;
+    /* margin-right: 5.5em; */
+    text-align: center;
 }
 
 header a:hover {
@@ -18,14 +20,26 @@ header a:hover {
 }
 
 header h1 {
-    margin-right: 10em;
-    margin-left: 1em;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0.5em;
     pointer-events: none;
 }
 
 header {
     margin:0;
     background-color: #4CAF50;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.headerLinks {
+    display: flex;
+    margin: 0.5em;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    width: 50%;
 }
 
 .contactPage {
@@ -78,4 +92,5 @@ p {
     justify-content: flex-start;
     width: 60%;
 }
+
 
