--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0;
 }
 header h1, header a {
@@ -21,8 +21,8 @@ header a:hover {
 
 header h1 {
     display: flex;
-    justify-content: flex-start;
-    margin: 0.5em;
+    justify-content: center;
+    margin: default;
     pointer-events: none;
 }
 
@@ -30,23 +30,23 @@ header {
     margin:0;
     background-color: #4CAF50;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     justify-content: space-between;
 }
 
 .headerLinks {
     display: flex;
     margin: 0.5em;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     justify-content: space-around;
-    width: 50%;
+    width: 100%;
 }
 
 .contactPage {
     background-image: url("../img/smokies.jpg");
     background-size: cover;
-    height:100vh;
-    overflow-y: auto;
+    height:100%;
+    /* overflow-y: auto; */
     font-family: 'Montserrat', sans-serif;
 
 }
@@ -58,11 +58,11 @@ header {
 .content {
     background-color: white;
     padding: 0 1.5em;
-    height: inherit;
-    width: 40%;
+    height: 50%;
+    width: inherit;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     opacity: 0.9;
 }
 
@@ -70,7 +70,7 @@ header {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    width: 50%;
+    width: 100%;
 }
 
 .links a {
@@ -89,8 +89,77 @@ p {
 .email_form {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    width: 60%;
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 5%;
 }
 
+@media only screen and (min-width: 768px){
+    .content {
+        background-color: white;
+        padding: 0 1.5em;
+        height: inherit;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        opacity: 0.9;
+    }
+
+    .contactPage {
+        background-image: url("../img/smokies.jpg");
+        background-size: cover;
+        height:100vh;
+        /* overflow-y: auto; */
+        font-family: 'Montserrat', sans-serif;
+    
+    }
+
+    .links {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        width: 50%;
+    }
+
+    .email_form {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 60%;
+        padding-bottom: 5%;
+    }
+
+    .headerLinks {
+        display: flex;
+        margin: 0.5em;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        width: 50%;
+    }
+
+    header {
+        margin:0;
+        background-color: #4CAF50;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+
+    header h1 {
+        display: flex;
+        justify-content: flex-start;
+        margin: 0.5em;
+        pointer-events: none;
+    }
+
+    .headerLinks {
+        display: flex;
+        margin: 0.5em;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+}
 
