added grayscale for high contrast users

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,18 @@ p {
     padding-bottom: 5%;
 }
 
+@media screen and (-ms-high-contrast: active){
+    .header {
+        background-color: black;
+    }
+    body {
+        -webkit-filter: grayscale(100%);
+        -moz-filter: grayscale(100%);
+        filter: grayscale(100%);
+    }
+}
+
+
 @media only screen and (min-width: 768px){
     .content {
         background-color: white;
