--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ header {
     margin: 0.5em;
     flex-flow: column wrap;
     justify-content: space-around;
-    width: 100%;
+    width: default;
 }
 
 .contactPage {
@@ -92,6 +92,14 @@ p {
     justify-content: center;
     width: 100%;
     padding-bottom: 5%;
+}
+
+.active {
+    background-color: rgb(101, 226, 105);
+}
+
+#jump {
+    text-decoration: none;
 }
 
 @media screen and (-ms-high-contrast: active){
