--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ header h1 {
 
 header {
     margin:0;
-    background-color: #4CAF50;
+    background-color: rgb(73, 165, 76) !important;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
@@ -95,7 +95,7 @@ p {
 }
 
 .active {
-    background-color: rgb(101, 226, 105);
+    border: 2px solid white;
 }
 
 #jump {
@@ -160,7 +160,7 @@ p {
 
     header {
         margin:0;
-        background-color: #4CAF50;
+        background-color: rgb(73, 165, 76) !important;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
